src/objects/Salesforce_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salesforce Payments</relationshipLabel>
        <relationshipName>Salesforce_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Batch</label>
        <referenceTo>Invoice_Batch__c</referenceTo>
        <relationshipLabel>Salesforce Payments</relationshipLabel>
        <relationshipName>Salesforce_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <label>Salesforce Payment</label>
    <nameField>
        <label>Salesforce Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>